# VMC

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  REFACTOR.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
VMC/core/: __init__.py  eval.py
VMC/drivers/: __init__.py  custom_driver.py
VMC/examples/: __init__.py  independent_set_sampling_check.py  main.py  minsr_smallo.py  psi_Inf_demo.py  real_time.py  real_time_minimal.py  verify_sequential_mh.py
VMC/gauge/: __init__.py  gauge.py  weight.py
docs/: sequential_sampling.md
drivers/: __init__.py
examples/: __init__.py  independent_set_sampling_check.py  main.py  real_time_minimal.py  verify_sequential_mh.py
notes/: nodal.typ  rydberg_peps_formulations.tex  sampling.typ  smallo.typ
qgt/: dense_qgt_operator.py
samplers/: __init__.py  sequential.py
scripts/: verify_sequential_sampling.py
tests/: test_driver_dynamics.py  test_fullsum_benchmark.py  test_gauge_projection.py  test_gradients_finite_diff.py  test_independent_set_sampling.py  test_integrators.py  test_local_estimate_exact.py  test_local_term_bucketing.py  test_mc_energy_grad_evaluator.py  test_mps_gauge_invariance.py  test_netket_compat.py  test_peps_eval.py  test_peps_strategy_equivalence.py  test_physics_models.py  test_qgt.py  test_qgt_netket_parity.py  test_qgt_solvers.py  test_sequential_gradients.py  test_sequential_sampling.py  test_sr_preconditioner_dense.py  test_tdvp_driver.py  test_time_dependent_hamiltonian.py  test_utils_vmc.py
utils/: __init__.py  vmc_utils.py
(+104 files in other folders)
